--- a/catalog-item.html
+++ b/catalog-item.html
@@ -24,8 +24,7 @@
         </div>
       </div>
     </header>
-  <main class="container">
-    <div class="care-products">
+    <main class="container">
       <h1> Набор для путешествий «Baxter of California»</h1>
       <nav class="breadcrumbs">
         <ul>
@@ -35,38 +34,43 @@
           <li>Набор для путешествий «Baxter of California»</li>
         </ul>
       </nav>
-    </div>
-    <div class="goods-pictures">
-      <img src="http://placehold.it/150x100" alt="1">
-      <img src="http://placehold.it/150x100" alt="2">
-      <img src="http://placehold.it/150x100" alt="3">
-      <img src="http://placehold.it/150x100" alt="4">
-    </div>
-    <div class="catalog-points">
-      <div>
-        <p>Есть в наличии</p>
-        <p>Артикул: dexter-ae</p>
-        <p>
-          Travel Kit – необходимый аксессуар во время любого путешествия.
-          В аккуратной кожаной сумке находится все, что нужно для бритья и
-          ухода за кожей во время рабочей поездки или отдыха: средство для
-          умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь.
-          Набор также может стать отличным подарком.
-        </p>
-        <p class="price"> 2900 руб.</p>
-        <a href="#" class="btn">Купить</a>
+      <div class="item-card">
+        <div class="pictures">
+          <div class="main-picture">
+            <img src="http://placehold.it/150x100" alt="1">
+          </div>
+          <div class="small-picture">
+            <img src="http://placehold.it/150x100" alt="2">
+            <img src="http://placehold.it/150x100" alt="3">
+            <img src="http://placehold.it/150x100" alt="4">
+          </div>
+        </div>
+        <div class="catalog-points">
+          <div class="catalog-item-header">
+            <p>Есть в наличии</p>
+            <p>Артикул: dexter-ae</p>
+          </div>
+          <p>
+            Travel Kit – необходимый аксессуар во время любого путешествия.
+            В аккуратной кожаной сумке находится все, что нужно для бритья и
+            ухода за кожей во время рабочей поездки или отдыха: средство для
+            умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь.
+            Набор также может стать отличным подарком.
+          </p>
+          <div class="price-button">
+            <p class="price"> 2900 руб.</p>
+            <a href="#" class="btn">Купить</a>
+          </div>
+          <h2>В набор входят:</h2>
+          <ul>
+            <li>Средство для умывания (50 мл)</li>
+            <li>Увлажняющий крем (50 мл)</li>
+            <li>Крем для бритья (50 мл)</li>
+            <li>Крем после бритья, шампунь (50 мл)</li>
+            <li>Удобная кожаная косметичка</li>
+          </ul>
+        </div>
       </div>
-      <section>
-        <h2>В набор входят:</h2>
-        <ul>
-          <li>Средство для умывания (50 мл)</li>
-          <li>Увлажняющий крем (50 мл)</li>
-          <li>Крем для бритья (50 мл)</li>
-          <li>Крем после бритья, шампунь (50 мл)</li>
-          <li>Удобная кожаная косметичка</li>
-        </ul>
-      </section>
-    </div>
     </main>
     <footer class="main-footer">
       <div class="container">
