--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Магазин</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="shop-header">
       <div class="container">
         <div class="logo">
-          <img src="img/index-logo.png" alt="Логотип">
+          <img src="img\Logo.png" alt="Логотип">
         </div>
         <nav class="main-navigation">
           <ul>
@@ -24,51 +25,53 @@
         </div>
       </div>
     </header>
-    <main class="container">
-      <h1> Набор для путешествий «Baxter of California»</h1>
-      <nav class="breadcrumbs">
-        <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Магазин</a></li>
-          <li><a href="#">Средства для ухода</a></li>
-          <li>Набор для путешествий «Baxter of California»</li>
-        </ul>
-      </nav>
-      <div class="item-card">
-        <div class="pictures">
-          <div class="main-picture">
-            <img src="http://placehold.it/150x100" alt="1">
-          </div>
-          <div class="small-picture">
-            <img src="http://placehold.it/150x100" alt="2">
-            <img src="http://placehold.it/150x100" alt="3">
-            <img src="http://placehold.it/150x100" alt="4">
-          </div>
-        </div>
-        <div class="catalog-points">
-          <div class="catalog-item-header">
-            <p>Есть в наличии</p>
-            <p>Артикул: dexter-ae</p>
-          </div>
-          <p>
-            Travel Kit – необходимый аксессуар во время любого путешествия.
-            В аккуратной кожаной сумке находится все, что нужно для бритья и
-            ухода за кожей во время рабочей поездки или отдыха: средство для
-            умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь.
-            Набор также может стать отличным подарком.
-          </p>
-          <div class="price-button">
-            <p class="price"> 2900 руб.</p>
-            <a href="#" class="btn">Купить</a>
-          </div>
-          <h2>В набор входят:</h2>
+    <main>
+      <div class="container">
+        <h1> Набор для путешествий «Baxter of California»</h1>
+        <nav class="breadcrumbs">
           <ul>
-            <li>Средство для умывания (50 мл)</li>
-            <li>Увлажняющий крем (50 мл)</li>
-            <li>Крем для бритья (50 мл)</li>
-            <li>Крем после бритья, шампунь (50 мл)</li>
-            <li>Удобная кожаная косметичка</li>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Средства для ухода</a></li>
+            <li>Набор для путешествий «Baxter of California»</li>
           </ul>
+        </nav>
+        <div class="item-card">
+          <div class="pictures">
+            <div class="main-picture">
+              <img src="img\BigSizeNaborDlyaPuteshestviy.png" alt="1">
+            </div>
+            <div class="small-picture">
+              <img src="img\1SmallSizeNaborDlyaPuteshestviy.png" alt="2">
+              <img src="img\2SmallSizeNaborDlyaPuteshestviy.png" alt="3">
+              <img src="img\3SmallSizeNaborDlyaPuteshestviy.png" alt="4">
+            </div>
+          </div>
+          <div class="catalog-points">
+            <div class="catalog-item-header">
+              <p>Есть в наличии</p>
+              <p>Артикул: dexter-ae</p>
+            </div>
+            <p>
+              Travel Kit – необходимый аксессуар во время любого <br>путешествия.
+              В аккуратной кожаной сумке находится все, что<br> нужно для бритья и
+              ухода за кожей во время рабочей поездки<br> или отдыха: средство для
+              умывания, увлажняющий крем, крем<br> для бритья, крем после бритья, шампунь.
+              Набор также может<br> стать отличным подарком.
+            </p>
+            <div class="price-button">
+              <p class="price"> 2900 руб.</p>
+              <a href="#" class="btn">Купить</a>
+            </div>
+            <h2>В набор входят:</h2>
+            <ul>
+              <li>Средство для умывания (50 мл)</li>
+              <li>Увлажняющий крем (50 мл)</li>
+              <li>Крем для бритья (50 мл)</li>
+              <li>Крем после бритья, шампунь (50 мл)</li>
+              <li>Удобная кожаная косметичка</li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
