--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Магазин</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
 <body>
   <header class="shop-header">
     <div class="container">
       <div class="logo">
-        <img src="img/index-logo.png" alt="Логотип">
+        <img src="img/logo.png" alt="Логотип">
       </div>
       <nav class="main-navigation">
         <ul>
@@ -24,121 +25,123 @@
       </div>
     </div>
   </header>
-  <main class="container">
-    <h1> Средства для ухода</h1>
-    <nav class="breadcrumbs">
-      <ul>
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">Магазин</a></li>
-        <li><a href="#">Средства для ухода</a></li>
-      </ul>
-    </nav>
-    <div class="catalog-list">
-      <form action="#" class="filters" method="post">
-        <div class="filter-1">
-          <h2>Производители:</h2>
-          <ul>
-            <li>
-              <input  name="producer" value="Baxter-of-California" id="first-box" type="checkbox" checked>
-              <label for="first-box">Baxter of California</label>
-            </li>
-            <li>
-              <input name="producer" value="Mr Natty" id="second-box" type="checkbox">
-              <label for="second-box">Mr Natty</label>
-            </li>
-            <li>
-              <input name="producer" value="Suavecito" id="third-box" type="checkbox" checked>
-              <label for="third-box">Suavecito</label>
-            </li>
-            <li>
-              <input name="producer" value="Malin+Goetz" id="fourth-box" type="checkbox">
-              <label for="fourth-box">Malin+Goetz</label>
-            </li>
-            <li>
-              <input name="producer" value="Murray’s" id="fifth-box" type="checkbox">
-              <label for="fifth-box">Murray’s</label>
-            </li>
-            <li>
-              <input name="producer" value="American Crew" id="sixth-box" type="checkbox" checked>
-              <label for="sixth-box">American Crew</label>
-            </li>
-          </ul>
-        </div>
-        <div class="filter-2">
-          <h2>Группы товаров</h2>
-          <ul>
-            <li>
-              <input  name="goods" value="razor" id="razor" type="checkbox">
-              <label for="razor">Бритвенные принадлежности</label>
-            </li>
-            <li>
-              <input name="goods" value="Cosmetics" id="Cosmetics" type="checkbox">
-              <label for="Cosmetics">Средства для ухода</label>
-            </li>
-            <li>
-              <input name="goods" id="accessories" type="checkbox" checked>
-              <label for="accessories">Аксессуары</label>
-            </li>
-          </ul>
-        </div>
-        <input type="submit" value="Показать">
-      </form>
-      <div class="catalog">
-        <div class="catalog-item-container">
-          <div class="catalog-item">
-            <a href="#"><img src="http://placehold.it/150x100" alt="Набор для путешествий"></a>
-            <a><p>Набор для путешествий<br>«Baxter of California»</p></a>
-            <div class="price-button">
-              <p class="price"> 2900 руб.</p>
-              <a href="#" class="btn">Купить</a>
+  <main>
+    <div class="container">
+      <h1> Средства для ухода</h1>
+      <nav class="breadcrumbs">
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Магазин</a></li>
+          <li><a href="#">Средства для ухода</a></li>
+        </ul>
+      </nav>
+      <div class="catalog-list">
+        <form action="#" class="filters" method="post">
+          <div class="produser">
+            <h2>Производители:</h2>
+            <ul>
+              <li>
+                <input  name="producer" value="Baxter-of-California" id="first-box" type="checkbox" checked>
+                <label for="first-box">Baxter of California</label>
+              </li>
+              <li>
+                <input name="producer" value="Mr Natty" id="second-box" type="checkbox">
+                <label for="second-box">Mr Natty</label>
+              </li>
+              <li>
+                <input name="producer" value="Suavecito" id="third-box" type="checkbox" checked>
+                <label for="third-box">Suavecito</label>
+              </li>
+              <li>
+                <input name="producer" value="Malin+Goetz" id="fourth-box" type="checkbox">
+                <label for="fourth-box">Malin+Goetz</label>
+              </li>
+              <li>
+                <input name="producer" value="Murray’s" id="fifth-box" type="checkbox">
+                <label for="fifth-box">Murray’s</label>
+              </li>
+              <li>
+                <input name="producer" value="American Crew" id="sixth-box" type="checkbox" checked>
+                <label for="sixth-box">American Crew</label>
+              </li>
+            </ul>
+          </div>
+          <div class="goods">
+            <h2>Группы товаров</h2>
+            <ul>
+              <li>
+                <input  name="goods" value="razor" id="razor" type="checkbox">
+                <label for="razor">Бритвенные принадлежности</label>
+              </li>
+              <li>
+                <input name="goods" value="Cosmetics" id="Cosmetics" type="checkbox">
+                <label for="Cosmetics">Средства для ухода</label>
+              </li>
+              <li>
+                <input name="goods" id="accessories" type="checkbox" checked>
+                <label for="accessories">Аксессуары</label>
+              </li>
+            </ul>
+          </div>
+          <input type="submit" value="Показать">
+        </form>
+        <div class="catalog">
+          <div class="catalog-item-container">
+            <div class="catalog-item">
+              <a href="#"><img src="img\NaborDlyaPuteshestviy.png" alt="Набор для путешествий"></a>
+              <a><p>Набор для путешествий<br>«Baxter of California»</p></a>
+              <div class="price-button">
+                <p class="price"> 2900 руб.</p>
+                <a href="#" class="btn">Купить</a>
+              </div>
+            </div>
+            <div class="catalog-item">
+              <a href="#"><img src="img\UvlaznCondicioner.png" alt="Увлажняющий кондиционер"></a>
+              <a><p>Увлажняющий кондиционер<br>«Baxter of California»</p></a>
+              <div class="price-button">
+                <p class="price"> 750 руб.</p>
+                <a href="#" class="btn">Купить</a>
+              </div>
+            </div>
+            <div class="catalog-item">
+              <a href="#"><img src="img\GelDlyaVolos.png" alt="Гель для волос"></a>
+              <a><p>Гель для волос<br>«SUAVECITO»</p></a>
+              <div class="price-button">
+                <p class="price"> 290 руб.</p>
+                <a href="#" class="btn">Купить</a>
+              </div>
+            </div>
+            <div class="catalog-item">
+              <a href="#"><img src="img\GlinaDlyaUkladki.png" alt="Глина для укладки волос"></a>
+              <a><p>Глина для укладки волос<br>«American crew»</p></a>
+              <div class="price-button">
+                <p class="price"> 500 руб.</p>
+                <a href="#" class="btn">Купить</a>
+              </div>
+            </div>
+            <div class="catalog-item">
+              <a href="#"><img src="img\GelDlyaVolosCrew.png" alt="Гель для волос"></a>
+              <a><p>Гель для волос<br>«AMERICAN CREW»</p></a>
+              <div class="price-button">
+                <p class="price"> 300 руб.</p>
+                <a href="#" class="btn">Купить</a>
+              </div>
+            </div>
+            <div class="catalog-item">
+              <a href="#"><img src="img\NaborDlyaBritia.png" alt="Набор для бритья"></a>
+              <a><p>Набор для бритья<br>«Baxter of California»</p></a>
+              <div class="price-button">
+                <p class="price"> 3900 руб.</p>
+                <a href="#" class="btn">Купить</a>
+              </div>
             </div>
           </div>
-          <div class="catalog-item">
-            <a href="#"><img src="http://placehold.it/150x100" alt="Увлажняющий кондиционер"></a>
-            <a><p>Увлажняющий кондиционер<br>«Baxter of California»</p></a>
-            <div class="price-button">
-              <p class="price"> 750 руб.</p>
-              <a href="#" class="btn">Купить</a>
-            </div>
+          <div class="pagination">
+            <a href="#" class="btn">1</a>
+            <a href="#" class="btn">2</a>
+            <a href="#" class="btn">3</a>
+            <a href="#" class="btn">4</a>
           </div>
-          <div class="catalog-item">
-            <a href="#"><img src="http://placehold.it/150x100" alt="Гель для волос"></a>
-            <a><p>Гель для волос<br>«SUAVECITO»</p></a>
-            <div class="price-button">
-              <p class="price"> 290 руб.</p>
-              <a href="#" class="btn">Купить</a>
-            </div>
-          </div>
-          <div class="catalog-item">
-            <a href="#"><img src="http://placehold.it/150x100" alt="Глина для укладки волос"></a>
-            <a><p>Глина для укладки волос<br>«American crew»</p></a>
-            <div class="price-button">
-              <p class="price"> 500 руб.</p>
-              <a href="#" class="btn">Купить</a>
-            </div>
-          </div>
-          <div class="catalog-item">
-            <a href="#"><img src="http://placehold.it/150x100" alt="Гель для волос"></a>
-            <a><p>Гель для волос<br>«AMERICAN CREW»</p></a>
-            <div class="price-button">
-              <p class="price"> 300 руб.</p>
-              <a href="#" class="btn">Купить</a>
-            </div>
-          </div>
-          <div class="catalog-item">
-            <a href="#"><img src="http://placehold.it/150x100" alt="Набор для бритья"></a>
-            <a><p>Набор для бритья<br>«Baxter of California»</p></a>
-            <div class="price-button">
-              <p class="price"> 3900 руб.</p>
-              <a href="#" class="btn">Купить</a>
-            </div>
-          </div>
-        </div>
-        <div class="pagination">
-          <a href="#" class="btn">1</a>
-          <a href="#" class="btn">2</a>
-          <a href="#" class="btn">3</a>
-          <a href="#" class="btn">4</a>
         </div>
       </div>
     </div>
