--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <header class="shop-header">
     <div class="container">
       <div class="logo">
-        <img src="img/logo.png" alt="Логотип">
+        <img src="img/Logo.png" alt="Логотип">
       </div>
       <nav class="main-navigation">
         <ul>
